# Unamed-Endive

./: .configure.sh.swp  .gitignore  .travis.yml  CMakeLists.txt  ENDIVE.cbp  ENDIVE.depend  ENDIVE.layout  LICENSE  README-fr.md  README.md  build.cmd  build.iss  config.json  configure  configure.sh  courbes.ggb  debug.hpp  debuging-manual.txt  events-defining.md  game.cpp  game.hpp  inno_build.iss  launcher.bat  launcher.sh  main.cpp  makerelease.bat  notes.txt  objects-defining.md  publish.bat  publisher.py  release-comments-model.txt  releases-to-upload.txt  resource.rc  test.json  version.h
.github/: CONTRIBUTING.md  README-fr.md  conversations.md  howto.md  tiled.md  tiled.md.save  type-de-projet.md
Unamed-Endive.wiki/: Bag.md  Controls.md  Home.md  More-info-on-scripting.md  PNJ.md  Scripting.md  Views.md  _Footer.md  _Sidebar.md
assets/: test.json
assets/adventure/: part2.txt
assets/aventure/: part1.txt  part2.txt  scenario.txt  scenes.txt
assets/cinematiques/: part1.umd  part1bis.umd  part2.umd  part2bis.umd
assets/config/: dex.json  dex2.json  switchs  typestable.json  vars  worldmap.json  worldmap_desc.json  worldmap_desc.umd
assets/configuration/: attacks.umd  creatures.umd  tiles.umd  (+2 more)
makefiles/: make.mac  make.unix  make.windows
py-tools/: README.md  add_order_to_dex.py  c2f.py  calque_to_folder.py  checkrelease.py  creatures-resize.py  cropper.py  dexstats.py  draftrelease.py  formatter.py  main.py  objedit.py  publisher.py  tkcommentsrelease.py  ysize.py
src/: README.md  constants.hpp  game.cpp  game.cpp.save  game.hpp  jsoncpp.cpp
(+232 files in other folders)
